# bingrep

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
src/: format.rs  format_archive.rs  format_elf.rs  format_mach.rs  format_meta.rs  format_pe.rs  hex.rs  main.rs
