[package]
authors = ["m4b <m4b.github.io@gmail.com>"]
name = "bingrep"
version = "0.8.5"
edition = "2018"
keywords = ["binary", "elf", "mach", "pe", "cross-platform"]
repository = "https://github.com/m4b/bingrep"
license = "MIT"
description = "Cross-platform binary parser and colorizer"
documentation = "https://docs.rs/bingrep"
readme = "README.md"
categories = ["command-line-utilities"]
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "LICENSE", "README.md", "etc/*"]

[dependencies]
atty = "0.2"
hexplay = "0.2"
termcolor = "1"
structopt = "0.3"
structopt-derive = "0.4"
rustc-demangle = "0.1"
cpp_demangle = "0.3"
scroll = "0.10"
prettytable-rs = "0.8"
env_logger = "0.8"
anyhow = "1"

[dependencies.metagoblin]
version = "0.4"

[[bin]]
name = "bingrep"

[badges.travis-ci]
branch = "master"
repository = "m4b/bingrep"
