[package]
authors = ["m4b <m4b.github.io@gmail.com>"]
name = "bingrep"
version = "0.10.2"
edition = "2021"
rust-version = "1.56.0"
keywords = ["binary", "elf", "mach", "pe", "cross-platform"]
repository = "https://github.com/m4b/bingrep"
license = "MIT"
description = "Cross-platform binary parser and colorizer"
documentation = "https://docs.rs/bingrep"
readme = "README.md"
categories = ["command-line-utilities"]
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "LICENSE", "README.md", "etc/*"]

[dependencies]
atty = "0.2"
hexplay = "0.2"
termcolor = "1"
rustc-demangle = "0.1"
cpp_demangle = "0.3"
scroll = "0.11"
prettytable-rs = "0.9"
env_logger = "0.9"
anyhow = "1"
clap = { version = "3", features = ["derive", "wrap_help"] }
term = "0.7"

[dependencies.metagoblin]
version = "0.7"

[[bin]]
name = "bingrep"

[badges.travis-ci]
branch = "master"
repository = "m4b/bingrep"
