[package]
authors = ["m4b <m4b.github.io@gmail.com>"]
name = "bingrep"
version = "0.12.1"
edition = "2021"
rust-version = "1.74.0"
keywords = ["binary", "elf", "mach", "pe", "cross-platform"]
repository = "https://github.com/m4b/bingrep"
license = "MIT"
description = "Cross-platform binary parser and colorizer"
documentation = "https://docs.rs/bingrep"
readme = "README.md"
categories = ["command-line-utilities"]
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "LICENSE", "README.md", "etc/*"]

[dependencies]
hexplay = "0.3"
termcolor = "1"
rustc-demangle = "0.1"
cpp_demangle = "0.5"
scroll = "0.12"
prettytable-rs = "0.10"
env_logger = { version = "0.11", features = ["color"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "wrap_help"] }
term = "0.7"

[dependencies.metagoblin]
version = "0.10"

[[bin]]
name = "bingrep"

[badges.travis-ci]
branch = "master"
repository = "m4b/bingrep"
